tests/NormalTests/paczka1/fuzzy1/50887244.err
Error in line 2: A560 A560 42,1
Error in line 7: H5es S302 57,2
Error in line 5: 76l76 S302 22,0
Error in line 37: ptbt6RDMxW A560 10,0
